[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/imgs/traps/lazer.png" type="Texture" id=1]
[ext_resource path="res://src/prefabs/traps/lazer_base.gd" type="Script" id=2]
[ext_resource path="res://assets/imgs/traps/lazer_point.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.329806, 0.552028, 0.996473, 1 )
colors = PoolColorArray( 0.992188, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0.721053, 0, 0, 0, 0, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 100, 50, 0 )
spread = 86.83
flatness = 0.22
gravity = Vector3( 0, 10, 0 )
initial_velocity = 30.21
initial_velocity_random = 0.24
angular_velocity = 6.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -32.56
damping = 26.5
damping_random = 0.39
angle = 145.0
angle_random = 1.0
scale_random = 0.43
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[node name="lazer_base" type="Node2D"]
script = ExtResource( 2 )

[node name="line" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = -1.0
margin_right = 204.0
margin_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blur" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = -4.0
margin_right = 204.0
margin_bottom = 4.0
color = Color( 1, 0, 0, 0.219608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4

[node name="particle" type="Particles2D" parent="."]
position = Vector2( 100, 0 )
rotation = 2.39757
amount = 20
lifetime = 1.5
preprocess = 1.0
speed_scale = 2.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="spr_anim" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/fire = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="tw_rotate" type="Tween" parent="."]

[node name="tw_move" type="Tween" parent="."]

[node name="ray" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 3

[node name="tm_bright" type="Timer" parent="."]

[node name="tm_move" type="Timer" parent="."]

[node name="tm_switch" type="Timer" parent="."]
[connection signal="timeout" from="tm_bright" to="." method="_on_tm_bright_timeout"]
[connection signal="timeout" from="tm_switch" to="." method="_on_tm_switch_timeout"]
